// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cargoUnits is empty 1`] = `
<div
  className="route_section_form layout-row flex-100 layout-wrap layout-align-center-center"
  name="cargoSection"
>
  <div
    className="layout-row flex-none layout-wrap layout-align-center-center content_width_booking_half"
  >
    <CargoUnits
      ShipmentDetails={
        Object {
          "availableMots": Array [
            "ocean",
            "air",
          ],
          "availableRoutes": Array [
            Object {
              "cargoClasses": Array [
                "lcl",
                "fcl_20",
                "fcl_40",
                "fcl_40_hq",
              ],
              "destination": Object {
                "country": "CN",
                "hubId": 3027,
                "hubName": "Qingdao Port",
                "latitude": 36.083811,
                "longitude": 120.323534,
                "nexusId": 601,
                "nexusName": "Qingdao",
                "stopId": 4657,
                "truckTypes": Array [],
              },
              "itineraryId": 2863,
              "itineraryName": "Gothenburg - Qingdao",
              "modeOfTransport": "ocean",
              "origin": Object {
                "country": "SE",
                "hubId": 3023,
                "hubName": "Gothenburg Port",
                "latitude": 57.694253,
                "longitude": 11.854048,
                "nexusId": 597,
                "nexusName": "Gothenburg",
                "stopId": 4656,
                "truckTypes": Array [
                  "default",
                ],
              },
            },
            Object {
              "cargoClasses": Array [
                "lcl",
              ],
              "destination": Object {
                "country": "CN",
                "hubId": 3034,
                "hubName": "Qingdao Airport",
                "latitude": 36.083811,
                "longitude": 120.323534,
                "nexusId": 601,
                "nexusName": "Qingdao",
                "stopId": 4847,
                "truckTypes": Array [],
              },
              "itineraryId": 2958,
              "itineraryName": "Gothenburg - Qingdao",
              "modeOfTransport": "air",
              "origin": Object {
                "country": "SE",
                "hubId": 3030,
                "hubName": "Gothenburg Airport",
                "latitude": 57.694253,
                "longitude": 11.854048,
                "nexusId": 597,
                "nexusName": "Gothenburg",
                "stopId": 4846,
                "truckTypes": Array [
                  "default",
                ],
              },
            },
          ],
        }
      }
      aggregatedCargo={false}
      cargoItemTypes={
        Array [
          Object {
            "area": null,
            "category": "Pallet",
            "created_at": "2018-06-27T17:28:28.431Z",
            "description": "Pallet",
            "id": 25,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.431Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Carton",
            "created_at": "2018-06-27T17:28:28.417Z",
            "description": "Carton",
            "id": 22,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.417Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Crate",
            "created_at": "2018-06-27T17:28:28.422Z",
            "description": "Crate",
            "id": 23,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.422Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Bottle",
            "created_at": "2018-06-27T17:28:28.436Z",
            "description": "Bottle",
            "id": 26,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.436Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Stack",
            "created_at": "2018-06-27T17:28:28.440Z",
            "description": "Stack",
            "id": 27,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.440Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Drum",
            "created_at": "2018-06-27T17:28:28.445Z",
            "description": "Drum",
            "id": 28,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.445Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Skid",
            "created_at": "2018-06-27T17:28:28.450Z",
            "description": "Skid",
            "id": 29,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.450Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Barrel",
            "created_at": "2018-06-27T17:28:28.454Z",
            "description": "Barrel",
            "id": 30,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.454Z",
            "width": null,
          },
        ]
      }
      cargoUnits={Array []}
      getPropStep={[Function]}
      getPropValue={[Function]}
      maxDimensions={
        Object {
          "air": Object {
            "chargeableWeight": "1000.0",
            "height": "150.0",
            "length": "100.0",
            "payloadInKg": "1000.0",
            "width": "120.0",
          },
          "general": Object {
            "chargeableWeight": "21770.0",
            "height": "228.0",
            "length": "234.2",
            "payloadInKg": "21770.0",
            "width": "590.0",
          },
        }
      }
      onChangeCargoUnitCheckbox={[Function]}
      onChangeCargoUnitInput={[Function]}
      onChangeCargoUnitSelect={[Function]}
      onDeleteUnit={[Function]}
      scope={
        Object {
          "cargo_info_level": "hs_codes",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": false,
          "closed_registration": false,
          "closed_shop": false,
          "consolidate_cargo": false,
          "continuous_rounding": false,
          "customs_export_paper": false,
          "dangerous_goods": false,
          "detailed_billing": false,
          "fee_detail": "key_and_name",
          "fixed_currency": false,
          "fixed_exchange_rates": false,
          "has_customs": true,
          "has_insurance": true,
          "incoterm_info_level": "text",
          "links": Object {
            "about": "",
            "legal": "",
          },
          "modes_of_transport": Object {
            "air": Object {
              "cargo_item": true,
              "container": true,
            },
            "ocean": Object {
              "cargo_item": true,
              "container": true,
            },
            "rail": Object {
              "cargo_item": true,
              "container": true,
            },
            "truck": Object {
              "cargo_item": false,
              "container": false,
            },
          },
          "non_stackable_goods": true,
          "open_quotation_tool": false,
          "require_full_address": true,
          "show_beta_features": true,
          "terms": Array [
            "You verify that all the information provided above is true",
            "You agree to the presented terms and conditions.",
            "Demo is to discuss the validity of the presented prices with the product owners.",
          ],
          "total_dimensions": true,
        }
      }
      theme={
        Object {
          "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
          "colors": Object {
            "brightPrimary": "#2491FD",
            "brightSecondary": "#25ED36",
            "primary": "#0D5BA9",
            "secondary": "#23802A",
          },
          "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
          "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
          "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
          "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
        }
      }
      toggleModal={null}
    />
    <div
      className="flex-100 layout-row layout-align-start"
    >
      <AddUnitButton
        onClick={[Function]}
        t={[Function]}
        theme={
          Object {
            "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
            "colors": Object {
              "brightPrimary": "#2491FD",
              "brightSecondary": "#25ED36",
              "primary": "#0D5BA9",
              "secondary": "#23802A",
            },
            "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
            "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="route_section_form layout-row flex-100 layout-wrap layout-align-center-center"
  name="cargoSection"
>
  <div
    className="layout-row flex-none layout-wrap layout-align-center-center content_width_booking_half"
  >
    <CargoUnits
      ShipmentDetails={
        Object {
          "availableMots": Array [
            "ocean",
            "air",
          ],
          "availableRoutes": Array [
            Object {
              "cargoClasses": Array [
                "lcl",
                "fcl_20",
                "fcl_40",
                "fcl_40_hq",
              ],
              "destination": Object {
                "country": "CN",
                "hubId": 3027,
                "hubName": "Qingdao Port",
                "latitude": 36.083811,
                "longitude": 120.323534,
                "nexusId": 601,
                "nexusName": "Qingdao",
                "stopId": 4657,
                "truckTypes": Array [],
              },
              "itineraryId": 2863,
              "itineraryName": "Gothenburg - Qingdao",
              "modeOfTransport": "ocean",
              "origin": Object {
                "country": "SE",
                "hubId": 3023,
                "hubName": "Gothenburg Port",
                "latitude": 57.694253,
                "longitude": 11.854048,
                "nexusId": 597,
                "nexusName": "Gothenburg",
                "stopId": 4656,
                "truckTypes": Array [
                  "default",
                ],
              },
            },
            Object {
              "cargoClasses": Array [
                "lcl",
              ],
              "destination": Object {
                "country": "CN",
                "hubId": 3034,
                "hubName": "Qingdao Airport",
                "latitude": 36.083811,
                "longitude": 120.323534,
                "nexusId": 601,
                "nexusName": "Qingdao",
                "stopId": 4847,
                "truckTypes": Array [],
              },
              "itineraryId": 2958,
              "itineraryName": "Gothenburg - Qingdao",
              "modeOfTransport": "air",
              "origin": Object {
                "country": "SE",
                "hubId": 3030,
                "hubName": "Gothenburg Airport",
                "latitude": 57.694253,
                "longitude": 11.854048,
                "nexusId": 597,
                "nexusName": "Gothenburg",
                "stopId": 4846,
                "truckTypes": Array [
                  "default",
                ],
              },
            },
          ],
        }
      }
      aggregatedCargo={false}
      cargoItemTypes={
        Array [
          Object {
            "area": null,
            "category": "Pallet",
            "created_at": "2018-06-27T17:28:28.431Z",
            "description": "Pallet",
            "id": 25,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.431Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Carton",
            "created_at": "2018-06-27T17:28:28.417Z",
            "description": "Carton",
            "id": 22,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.417Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Crate",
            "created_at": "2018-06-27T17:28:28.422Z",
            "description": "Crate",
            "id": 23,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.422Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Bottle",
            "created_at": "2018-06-27T17:28:28.436Z",
            "description": "Bottle",
            "id": 26,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.436Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Stack",
            "created_at": "2018-06-27T17:28:28.440Z",
            "description": "Stack",
            "id": 27,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.440Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Drum",
            "created_at": "2018-06-27T17:28:28.445Z",
            "description": "Drum",
            "id": 28,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.445Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Skid",
            "created_at": "2018-06-27T17:28:28.450Z",
            "description": "Skid",
            "id": 29,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.450Z",
            "width": null,
          },
          Object {
            "area": null,
            "category": "Barrel",
            "created_at": "2018-06-27T17:28:28.454Z",
            "description": "Barrel",
            "id": 30,
            "length": null,
            "updated_at": "2018-06-27T17:28:28.454Z",
            "width": null,
          },
        ]
      }
      cargoUnits={
        Array [
          Object {
            "cargoItemTypeId": 23,
            "dangerousGoods": false,
            "height": 12,
            "length": 132,
            "payloadInKg": 223,
            "quantity": 6,
            "stackable": true,
            "totalVolume": 0,
            "totalWeight": 0,
            "width": 5,
          },
        ]
      }
      getPropStep={[Function]}
      getPropValue={[Function]}
      maxDimensions={
        Object {
          "air": Object {
            "chargeableWeight": "1000.0",
            "height": "150.0",
            "length": "100.0",
            "payloadInKg": "1000.0",
            "width": "120.0",
          },
          "general": Object {
            "chargeableWeight": "21770.0",
            "height": "228.0",
            "length": "234.2",
            "payloadInKg": "21770.0",
            "width": "590.0",
          },
        }
      }
      onChangeCargoUnitCheckbox={[Function]}
      onChangeCargoUnitInput={[Function]}
      onChangeCargoUnitSelect={[Function]}
      onDeleteUnit={[Function]}
      scope={
        Object {
          "cargo_info_level": "hs_codes",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": false,
          "closed_registration": false,
          "closed_shop": false,
          "consolidate_cargo": false,
          "continuous_rounding": false,
          "customs_export_paper": false,
          "dangerous_goods": false,
          "detailed_billing": false,
          "fee_detail": "key_and_name",
          "fixed_currency": false,
          "fixed_exchange_rates": false,
          "has_customs": true,
          "has_insurance": true,
          "incoterm_info_level": "text",
          "links": Object {
            "about": "",
            "legal": "",
          },
          "modes_of_transport": Object {
            "air": Object {
              "cargo_item": true,
              "container": true,
            },
            "ocean": Object {
              "cargo_item": true,
              "container": true,
            },
            "rail": Object {
              "cargo_item": true,
              "container": true,
            },
            "truck": Object {
              "cargo_item": false,
              "container": false,
            },
          },
          "non_stackable_goods": true,
          "open_quotation_tool": false,
          "require_full_address": true,
          "show_beta_features": true,
          "terms": Array [
            "You verify that all the information provided above is true",
            "You agree to the presented terms and conditions.",
            "Demo is to discuss the validity of the presented prices with the product owners.",
          ],
          "total_dimensions": true,
        }
      }
      theme={
        Object {
          "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
          "colors": Object {
            "brightPrimary": "#2491FD",
            "brightSecondary": "#25ED36",
            "primary": "#0D5BA9",
            "secondary": "#23802A",
          },
          "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
          "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
          "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
          "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
        }
      }
      toggleModal={null}
    />
    <div
      className="flex-100 layout-row layout-align-start"
    >
      <AddUnitButton
        onClick={[Function]}
        t={[Function]}
        theme={
          Object {
            "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
            "colors": Object {
              "brightPrimary": "#2491FD",
              "brightSecondary": "#25ED36",
              "primary": "#0D5BA9",
              "secondary": "#23802A",
            },
            "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
            "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
          }
        }
      />
    </div>
  </div>
</div>
`;
